--- a/project.properties
+++ b/project.properties
@@ -9,5 +9,6 @@
 
 # Project target.
 proguard.config=proguard.cfg
-target=android-18
-android.library.reference.1=../../Downloads/IDE/projects/Mscellaneous/ActionBarSherlock4.2.0
+target=android-19
+android.library.reference.1=../../adt-workspace/actionbarsherlock
+android.library=true
