--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,6 +48,7 @@
 	<uses-feature android:name="android.hardware.location.network" android:required="false" />	
 	<uses-feature android:name="android.hardware.location.gps" android:required="false" />
 	<uses-feature android:name="android.hardware.wifi" android:required="false" />
+	<uses-feature android:name="android.hardware.bluetooth_le" android:required="false"/>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:hardwareAccelerated="true" android:theme="@style/Theme.Styled">
         <activity android:name="org.metawatch.manager.MainActivity" android:configChanges="keyboardHidden|orientation" android:launchMode="singleTask">
@@ -169,6 +170,12 @@
 			<intent-filter>
 				<action android:name="android.accessibilityservice.AccessibilityService" />
 			</intent-filter>
+		</service>
+		<service android:name="org.metawatch.manager.MetaWatchNotificationListener"
+		    android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+		    <intent-filter>
+		        <action android:name="android.service.notification.NotificationListenerService" />
+		    </intent-filter>
 		</service>      
         <activity android:name="org.metawatch.manager.Settings" android:launchMode="standard"/>
         <activity android:name="org.metawatch.manager.WidgetPicker" android:launchMode="standard"/>
