--- a/project.properties
+++ b/project.properties
@@ -8,7 +8,7 @@
 # project structure.
 
 # Project target.
-proguard.config=proguard.cfg
+#proguard.config=proguard.cfg
 target=android-19
 android.library.reference.1=../../adt-workspace/actionbarsherlock
-android.library=true
+android.library=false
