Migrate MWM to Android Studio. Now compile but not worked :)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+
     defaultConfig {
-        applicationId "ru.inetsolution.ru.mwm"
+        applicationId "org.metawatch.manager"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
