--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
 	<uses-feature android:name="android.hardware.wifi" android:required="false" />
 	<uses-feature android:name="android.hardware.bluetooth_le" android:required="false"/>
 
-    <application android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:hardwareAccelerated="true" android:theme="@style/AppTheme">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:hardwareAccelerated="true" android:theme="@style/Theme.Styled">
         <activity android:name="org.metawatch.manager.MainActivity" android:configChanges="keyboardHidden|orientation" android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
